# whale

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  arma.cpp  graph.cpp  nlgraph.cpp  nlgraph.h
include/: nlgraph.h
source/: arma.cpp  cxxgraph.cpp  mlpack.cpp  movie.cpp  nlgraph.cpp
tests/: g1.json
tests/test_nlgraph/: CMakeLists.txt  main.cpp
